--- a/Kapstondaw/capstone-frontend/scss/layout/_login.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_login.scss
@@ -11,8 +11,16 @@
     align-items: center;
     justify-content: center;
 
-    img {
+    .logo-container {
       width: 500px;
+      height: 500px;
+      border-radius: 100%;
+      overflow: hidden;
+      img {
+        object-fit: cover;
+        width: inherit;
+        height: inherit;
+      }
     }
   }
 
