--- a/Kapstondaw/capstone-frontend/scss/layout/_footer.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_footer.scss
@@ -8,13 +8,24 @@ footer {
   text-align: center;
   gap: 1rem;
   color: #fff;
-  @media(min-width: 375px) {
+  @media (min-width: 375px) {
     justify-content: space-between;
     padding: 2rem;
   }
 
-  .links {
+  .logo {
+    width: 190px;
+    height: 190px;
+    border-radius: 100%;
+    overflow: hidden;
 
+    img {
+      object-fit: cover;
+      width: inherit;
+      height: inherit;
+    }
+  }
+  .links {
     ul {
       padding: 0;
       li {
@@ -22,8 +33,8 @@ footer {
         font-size: 1rem;
         margin-bottom: 1rem;
 
-        @media(min-width: 375px) {
-          list-style:disc;
+        @media (min-width: 375px) {
+          list-style: disc;
           text-align: start;
         }
       }
@@ -34,9 +45,7 @@ footer {
   }
 
   .com {
-
     ul {
-
       li {
         text-align: start;
         list-style: none;
