--- a/Kapstondaw/capstone-frontend/scss/layout/_home.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_home.scss
@@ -56,15 +56,25 @@
     position: absolute;
     top: 0;
     width: 375px;
+    height: 375px;
     transition: 0.2s ease-in-out;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    opacity: 0.2;
+    z-index: -1;
     @media (min-width: 375px) {
       position: static;
-      top: 0;
-      width: 450px;
+      width: 430px;
+      height: 430px;
     }
 
     img {
       width: inherit;
+      height: inherit;
+      object-fit: cover;
     }
   }
 }
