--- a/Kapstondaw/capstone-frontend/scss/layout/_zone4.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_zone4.scss
@@ -3,11 +3,15 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  background-image:linear-gradient(120deg,rgba(#006630, 100%), rgba(#6BA024, 100%));
+  background-image: linear-gradient(
+    120deg,
+    rgba(#006630, 100%),
+    rgba(#6ba024, 100%)
+  );
   height: 8vh;
   padding-left: 1rem;
   min-width: 375px;
-  @media(min-width: 375px) {
+  @media (min-width: 375px) {
     display: none;
   }
 
@@ -15,19 +19,30 @@
     display: flex;
     align-items: center;
     gap: 1rem;
-    .logo {
-      width: 70px;
-
-      img {
+    position: relative;
+    .section1 {
+      width: 77px;
+      height: inherit;
+      .logo {
+        width: 77px;
+        height: 77px;
+        border-radius: 100%;
         position: absolute;
-        top: 30%;
-        width: inherit;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+          width: inherit;
+          height: inherit;
+          border-radius: inherit;
+        }
       }
     }
     .brgy {
       span {
         color: #fff;
-        font-size: .8rem;
+        font-size: 0.8rem;
       }
       h2 {
         color: #fff;
