--- a/Kapstondaw/capstone-frontend/scss/layout/_about.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_about.scss
@@ -47,13 +47,18 @@
   .officials {
     display: none;
     @media (min-width: 375px) {
-      display: block;
-      text-align: center;
-      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      object-fit: cover;
+      width: clamp(744px, 100%, 1300px);
+      height: 600px;
       margin-bottom: 2rem;
 
       img {
-        width: clamp(744px, 80%, 100%);
+        object-fit: cover;
+        width: inherit;
+        height: inherit;
       }
     }
   }
