--- a/Kapstondaw/capstone-frontend/scss/layout/_home.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_home.scss
@@ -10,6 +10,7 @@
   }
 
   .context {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,9 +55,12 @@
   }
   .logo {
     position: absolute;
-    top: 0;
-    width: 375px;
-    height: 375px;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+    width: 350px;
+    height: 350px;
     transition: 0.2s ease-in-out;
     border-radius: 100%;
     display: flex;
@@ -67,6 +71,7 @@
     z-index: -1;
     @media (min-width: 375px) {
       position: static;
+      transform: translate(0, 0);
       width: 430px;
       height: 430px;
     }
