--- a/Kapstondaw/capstone-frontend/scss/layout/_login.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_login.scss
@@ -15,7 +15,11 @@
       width: 500px;
       height: 500px;
       border-radius: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       overflow: hidden;
+      background-color: black;
       img {
         object-fit: cover;
         width: inherit;
