--- a/Kapstondaw/capstone-frontend/scss/layout/_main-announcement.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_main-announcement.scss
@@ -21,9 +21,12 @@
 
   .image-container {
     background-color: red;
-    object-fit: cover;
+    width: 100%;
+    height: 600px;
     img {
       width: 100%;
+      height: inherit;
+      object-fit: cover;
     }
   }
   h2,
