--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -306,6 +306,7 @@ header ul li:nth-child(5) {
   }
 }
 .home .context {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -353,9 +354,11 @@ header ul li:nth-child(5) {
 }
 .home .logo {
   position: absolute;
-  top: 0;
-  width: 375px;
-  height: 375px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  height: 350px;
   transition: 0.2s ease-in-out;
   border-radius: 100%;
   display: flex;
@@ -368,6 +371,7 @@ header ul li:nth-child(5) {
 @media (min-width: 375px) {
   .home .logo {
     position: static;
+    transform: translate(0, 0);
     width: 430px;
     height: 430px;
   }
@@ -799,11 +803,11 @@ header ul li:nth-child(5) {
   text-align: center;
   width: -moz-fit-content;
   width: fit-content;
+  overflow: hidden;
 }
 .announcement .swiper .options .card .picture {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: 300px;
 }
 @media (min-width: 375px) {
   .announcement .swiper .options .card .picture {
@@ -812,6 +816,7 @@ header ul li:nth-child(5) {
 }
 .announcement .swiper .options .card .picture img {
   width: 100%;
+  height: inherit;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -1025,7 +1030,11 @@ footer .com ul li {
   width: 500px;
   height: 500px;
   border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
+  background-color: black;
 }
 .login_page .section-1 .logo-container img {
   -o-object-fit: cover;
@@ -1128,11 +1137,14 @@ footer .com ul li {
 }
 .announcement_context .image-container {
   background-color: red;
-  -o-object-fit: cover;
-     object-fit: cover;
+  width: 100%;
+  height: 600px;
 }
 .announcement_context .image-container img {
   width: 100%;
+  height: inherit;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .announcement_context h2,
 .announcement_context p {
